<resources>
    <string name="app_name">Refresh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="challenge_fragment">Challenge Fragment</string>
    <string name="pemenang_fragment">Pemenang Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="minatozaki_sana">Minatozaki Sana</string>
    <string name="_1_august_2020">1 August 2020</string>
    <string name="more_button">more button</string>
    <string name="ticket_picture">ticket picture</string>
    <string name="_9">9</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
</resources>